--- a/package.json
+++ b/package.json
@@ -29,5 +29,9 @@
   "bugs": {
     "url": "https://github.com/Rossb0b/imageToBase64/issues"
   },
-  "homepage": "https://github.com/Rossb0b/imageToBase64#readme"
+  "homepage": "https://github.com/Rossb0b/imageToBase64#readme",
+  "dependencies": {
+    "@types/node-fetch": "^2.5.8",
+    "node-fetch": "^2.6.1"
+  }
 }
