--- a/package.json
+++ b/package.json
@@ -16,9 +16,10 @@
   "author": "HALLAERT Nicolas",
   "license": "MIT",
   "devDependencies": {
-    "@types/node": "^14.14.31",
-    "@types/node-fetch": "^2.5.8",
-    "jest": "^26.6.3"
+    "@types/jest": "^27.0.3",
+    "jest": "^27.4.4",
+    "ts-jest": "^27.1.1",
+    "typescript": "^4.5.3"
   },
   "directories": {
     "test": "test"
