--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,8 @@
 {
     "compilerOptions": {
-      "target": "es2019",
+      "target": "ES2020",
       "module": "commonjs",
-      "strict": true,
+      "strict": false,
       "declaration": true,
       "outDir": "./dist"
     },
