--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,23 @@
 {
-    "compilerOptions": {
-      "target": "ES2020",
-      "module": "commonjs",
-      "strict": false,
-      "declaration": true,
-      "outDir": "./dist"
+  "compilerOptions": {
+    "target": "ES2020",
+    "module": "commonjs",
+    "strict": false,
+    "outDir": "./dist",
+    "moduleResolution": "node",
+    "resolveJsonModule": true,
+    "baseUrl": "./src",
+    "declaration": true,
+    "paths": {
+      "#src/*": ["./src/*"]
     },
-    "exclude": [
-        "tests",
-        "dist",
-        "node_modules"
-    ]
+    "typeRoots": ["node_modules/@types", "./types"],
+    "types": ["jest", "node"],
+    "esModuleInterop": true
+  },
+  "include": [
+    "src/**/**/*.ts",
+    "./types"
+  ],
+  "exclude": ["node_modules"]
 }
